--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     />
     <!-- Kanit FONT-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!-- IBM Plex Sans KR FONT -->
